--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.3.1",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
